# voxclone

./: .gitignore  README.md  pyproject.toml
configs/: default.yaml  gptsovits.yaml
docs/: HANDOFF.md  RUNBOOK_finetune.md  SETUP.md  finetune-vs-zeroshot-report.md  research-2026-05-25-finetune-zeroshot.md
experiments/: README.md  ab_eval.py  ab_eval_finetune.py  ab_eval_finetune_results.json  ab_eval_results.json  ab_gen_chatterbox.py  ab_gen_f5.py  ab_gen_f5_ft.py  ab_gen_gptsovits.py  ab_gen_xtts.py  ab_gen_xtts_ft.py  ab_sentences.json  eval_zeroshot.py  eval_zeroshot_results.json  log.jsonl  make_recording_pdf.py  make_recording_script.py  smoke_chatterbox.py  smoke_f5.py  smoke_xtts.py
experiments/danil/: README.md  f5_smoke.yaml  f5_train.yaml  recording_script.md
frontend/: app.js  index.html  style.css
notebooks/: build_voice_cloning_study.py  voice_cloning_study.ipynb
scripts/: serve_engines.sh  serve_finetuned.sh
src/scripts/: capture.py  eval.py  import_recording.py  prep.py  serve.py  train.py  verify_recording.py
tests/: test_build_voice_cloning_study.py  test_engine_server.py  test_no_hardcoded_paths.py  test_serve_engines_script.py  test_serve_finetuned_script.py  test_showcase_render.py  test_smoke_clone.py  test_smoke_prep.py  test_synth_adapters.py  test_synth_client.py
tests/capture/: test_prompts.py  test_recorder.py  test_session.py  test_verify.py
tests/clone/: test_studio.py
tests/common/: test_audio_io.py  test_audio_loudness.py  test_audio_snr.py  test_config.py  test_registry.py  test_seed.py
tests/eval/: test_normalize.py  (+7 more)
(+73 files in other folders)
