[project]
name = "voxclone"
version = "0.1.0"
description = "Voice cloning pipeline + demo"
requires-python = ">=3.11"
dependencies = [
    "pydantic>=2.6",
    "pyyaml>=6.0",
    "numpy>=1.26",
    "soundfile>=0.12",
    "librosa>=0.10",
    "pyloudnorm>=0.1.1",
    "silero-vad>=5.1",
    "faster-whisper>=1.0",
    "whisperx>=3.1",
    "noisereduce>=3.0",
    "sounddevice>=0.4.6",
    "speechbrain>=1.0",
    "fastapi>=0.110",
    "uvicorn>=0.29",
    "httpx>=0.27",
    "whisper-normalizer>=0.1.12",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-mock>=3.12",
    "httpx>=0.27",
    "nbformat>=5.10",
    "ipython>=8.20",
    "ipywidgets>=8.1",
    "matplotlib>=3.8",
    "nbconvert>=7",
    "ipykernel>=6,<7",  # ipykernel 7.x hangs VS Code's Jupyter kernel startup
    "fpdf2>=2.8",
]

[project.scripts]
voxclone-prep = "scripts.prep:main"
voxclone-train = "scripts.train:main"
voxclone-eval = "scripts.eval:main"
voxclone-serve = "scripts.serve:main"
voxclone-capture = "scripts.capture:main"
voxclone-verify = "scripts.verify_recording:main"
voxclone-import = "scripts.import_recording:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/voxclone", "src/scripts"]

[tool.pytest.ini_options]
pythonpath = ["src", "."]
testpaths = ["tests"]
